samples/_failures_safe/1761277589_74290e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_943c1d55.c: In function ‘main’:
./samples/SAFE/__tmp_943c1d55.c:139:30: error: missing terminating " character
  139 |     add_log_entry(&analyzer, "2024-01-15 10:30:
      |                              ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_943c1d55.c:139:5: error: expected expression at end of input
  139 |     add_log_entry(&analyzer, "2024-01-15 10:30:
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_943c1d55.c:139:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_943c1d55.c:53:5: note: declared here
   53 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_943c1d55.c:139:5: error: expected declaration or statement at end of input
  139 |     add_log_entry(&analyzer, "2024-01-15 10:30:
      |     ^~~~~~~~~~~~~
